feat: scaffolding for solutions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    // Enable latest features
+	"baseUrl": "./src",
+	"paths": {
+	  "templates": ["./templates"]
+	},
+	// Enable latest features
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
