--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "advent-of-code",
-  "module": "index.ts",
+  "module": "./src/index.ts",
   "type": "module",
+  "scripts": {
+    "setup": "bun ./src/scripts/setup.ts",
+	"dev": "bun --watch run ./src/index.ts",
+	"test": "bun --watch test"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.15.0",
+    "@types/bun": "latest",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.15.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
